2006-03-25  Daniel Stone  <daniel@freedesktop.org>

	* xkb/xkbUtils.c:
	Fix two of the more glaring unconditional-NULL-dereference screwups.
	There are many more left.

	* xkb/Makefile.am:
	* xkb/xkbconfig.c:
	* xkb/ddxConfig.c:
	* xkb/xkbInit.c:
	* hw/xgl/glx/xglx.c:
	* hw/xnest/Keyboard.c:
	Remove weirdo XkbCF pre-configuration code.

	* xkb/xkb.h:
	* xkb/xkb.c:
	Remove INITARGS braindamage, change to void; add XkbExtensionInit
	prototype to xkb.h.
	Explicitly initialise nTypes in xkb.c.

	* configure.ac:
	* include/xkb-config.h.in:
	* xkb/xkbfmisc.c:
	* xkb/maprules.c:
	* hw/xfree86/dixmods/xkbPrivate.c:
	Bug #3819: Remove open-coding of strcasecmp.

	* xkb/ddxVT.c:
	* xkb/ddxPrivate.c:
	* xkb/ddxKillSrv.c:
	* hw/xfree86/dixmods/Makefile.am:
	* hw/xfree86/dixmods/xkbVT.c:
	* hw/xfree86/dixmods/xkbPrivate.c:
	* hw/xfree86/dixmods/xkbKillSrv.c:
	Move XFree86 DDX actions out of xkb/ and into proper files in their
	own right in dixmods.

	* xkb/Makefile.am:
	* xkb/XKBAlloc.c:
	* xkb/XKBGAlloc.c:
	* xkb/XKBMAlloc.c:
	* xkb/XKBMisc.c:
	* xkb/xkbfmisc.c:
	* xkb/xkmread.c:
	* xkb/xkbtext.c:
	* xkb/xkbout.c:
	Prune XKB code to only what we need to run the server.  Remove dead
	!XKB_IN_SERVER codepaths.  Remove HAVE_CONFIG_H codepaths.

2006-03-25  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Bus.c:
	* hw/xfree86/common/xf86Configure.c:
	* hw/xfree86/common/xf86Cursor.c:
	* hw/xfree86/common/xf86DGA.c:
	* hw/xfree86/common/xf86DPMS.c:
	* hw/xfree86/common/xf86Debug.c:
	* hw/xfree86/common/xf86Events.c:
	* hw/xfree86/common/xf86Globals.c:
	* hw/xfree86/common/xf86Helper.c:
	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/common/xf86Io.c:
	* hw/xfree86/common/xf86MiscExt.c:
	* hw/xfree86/common/xf86Mode.c:
	* hw/xfree86/common/xf86Option.c:
	* hw/xfree86/common/xf86RandR.c:
	* hw/xfree86/common/xf86Versions.c:
	* hw/xfree86/common/xf86VidMode.c:
	* hw/xfree86/common/xf86Xinput.c:
	* hw/xfree86/common/xf86cmap.c:
	* hw/xfree86/common/xf86fbBus.c: